# chrysostom

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-wasm.sh  index.html  nginx.conf  package-lock.json  package.json  railway.toml
.cargo/: config.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: build.yml
docs/: ART_STYLE_GUIDE.md  ART_TOOLS.md  ASSET_LIST.md  README.md  SPRITE_SPECS.md  TILED_SETUP.md
rust-src/: main.rs  npc.rs  world.rs
src/: dialogue.rs  main.js  player.rs
src/data/: README.md
src/data/dialogues/: chrysostom_first_mission.json  chrysostom_intro.json  deacon_stephanos.json  market_merchant.json  poor_family.json
src/data/quests/: false_measure.json  first_mission.json
src/input/: VirtualGamepad.js
src/portraits/: PortraitRenderer.js
src/scenes/: BootScene.js  DialogueScene.js  ExplorationScene.js
web/: index.html
