[package]
name = "chrysostom"
version = "0.1.0"
edition = "2024"
description = "An Orthodox exploration game - Constantinople in the time of St. John Chrysostom"
repository = "https://github.com/chrisaddy/chrysostom"

[dependencies]
bevy = "0.15"

# Faster compile times for dev
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# WASM release profile
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
