[package]
name = "chrysostom"
version = "0.1.0"
edition = "2024"
description = "An Orthodox exploration game - Constantinople in the time of St. John Chrysostom"
repository = "https://github.com/chrisaddy/chrysostom"

[dependencies]
bevy = "0.15"

# WASM support - getrandom needs wasm_js feature for both 0.2 and 0.3
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Faster compile times for dev
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# WASM release profile  
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
